<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="color_infobox">#EFEFEF</color>
    <color name="color_board">#EFEFEF</color>

    <string name="text_gamestart_title">规则设置</string>
    <string name="text_chooselevel_title">选择打几</string>
    <string name="text_selecttrump_title">选择主</string>
    <string name="btn_prev">‹ 重置</string>
    <string name="app_name">升级记牌器</string>
    <string name="text_cfg">设置：</string>
    <string name="text_cfg_sets">副牌</string>
    <string name="text_cfg_level">打</string>
    <string name="text_cfg_trump">翻主</string>
    <string name="text_cfg_reset">重置设置</string>
    <string name="text_new">开始新游戏</string>
    <string name="text_sets_1">&lt;b>一副牌&lt;/b>&lt;br>&lt;small>54张牌&lt;br>40过关&lt;/small></string>
    <string name="text_sets_2">&lt;b>二副牌&lt;/b>&lt;br>&lt;small>108张牌&lt;br>80过关&lt;/small></string>
    <string name="text_sets_3">&lt;b>三副牌&lt;/b>&lt;br>&lt;small>162张牌&lt;br>120过关&lt;/small></string>
    <string name="text_sets_4">&lt;b>四副牌&lt;/b>&lt;br>&lt;small>216张牌&lt;br>160过关&lt;/small></string>
    <string name="text_sets_5">&lt;b>五副牌&lt;/b>&lt;br>&lt;small>270张牌&lt;br>200过关&lt;/small></string>
    <string name="text_sets_6">&lt;b>六副牌&lt;/b>&lt;br>&lt;small>324张牌&lt;br>240过关&lt;/small></string>
    <string name="text_set_unit">副牌</string>
    <string name="text_level_unit">打</string>
    <string name="text_trump_unit">王</string>
    <string name="text_card_unit">张</string>
    <string name="text_point_unit">分</string>
    <string name="text_info_cardsleft">牌数</string>
    <string name="text_info_pointsleft">分数</string>
    <string name="text_info_pointsgained">得分</string>
    <string name="text_setting_sets">规则</string>
    <string name="text_setting_level">冲关</string>
    <string name="text_setting_trump">翻王</string>
    <string name="text_back">后退</string>

</resources>